syntax = "proto3";

option java_multiple_files = true;
option java_package = "k.ketchapp.proto";

package kapp;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service EventProcessor {
  rpc processEvent(ProcessEventRequest) returns (google.protobuf.Empty);
}

service RecordService {
  rpc storeEvent(StoreEventRequest) returns (google.protobuf.Empty);
  rpc getEvents(google.protobuf.Empty) returns (GetEventsResponse);
}


// Request / Response messages

message ProcessEventRequest {
  Event event = 1;
}

message StoreEventRequest {
  Event event = 1;
}

message GetEventsResponse {
  repeated Event event = 1;
}

// Data structures

message Event {
  google.protobuf.Timestamp startDate = 1;
  google.protobuf.Timestamp endDate = 2;
}